# softlaw_chain

./: README.md  package.json
Front-end/: .env.example  package-lock.json  package.json
Front-end/src/app/: globals.css  layout.tsx  page.tsx
Front-end/src/app/Dashboard/: page.tsx
Front-end/src/app/Innovation/: page.tsx
Front-end/src/app/IpSearch/: page.tsx
Front-end/src/app/Registries/: page.tsx
Front-end/src/app/RicardianContracts/: page.tsx
Front-end/src/app/collection/: page.tsx
Front-end/src/app/components/: NavBar.tsx  UploadFiles.tsx
Front-end/src/app/licensing/: page.tsx
Front-end/src/app/search/: page.tsx
Front-end/src/components/: Footer.tsx  NavBar.tsx  UploadFiles.tsx  WalletConnect.tsx  WalletConnext.tsx
Front-end/src/components/Dashboard/: BentoLinks.tsx  Dash.tsx  IPSearch.tsx
Front-end/src/components/Extrinsics/: acceptLicense.tsx
Front-end/src/components/IPSearch/: IPSearch.tsx
Front-end/src/components/ProofOfInnovation/: index.tsx  input.tsx
Front-end/src/components/RicardianContracts.tsx/: input.tsx
Front-end/src/components/auth/: AccountSelector.tsx  LoginButton.tsx
Front-end/src/context/: account.tsx  innovation.tsx
Front-end/src/utils/: getApi.ts  getSDK.ts  getSigner.ts
IP_chain/: Cargo.toml  network.toml
IP_chain/node/src/: chain_spec.rs  cli.rs  command.rs
IP_chain/runtime/: Cargo.toml
IP_chain/runtime/src/: lib.rs
IP_pallet/: Cargo.toml  LicensingAgreement.txt
IP_pallet/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  types.rs
IP_pallet/src/tests/: accept_license_tests.rs  accept_purchase_tests.rs  create_license_tests.rs  escrow_nft_tests.rs  make_periodic_payment_tests.rs  offer_tests.rs  on_initialize_tests.rs  periodic_payment_tests.rs  revoke_license_tests.rs  util.rs
softlaw_chain/: .gitignore  Cargo.toml  collators.txt  keys.txt  network.toml  para-4528-genesis-state.txt  para-4528-wasm.txt  plain-parachain-chainspec.json  raw-parachain-chainspec.json
softlaw_chain/node/src/: chain_spec.rs  cli.rs  command.rs
softlaw_chain/runtime/: Cargo.toml
softlaw_chain/runtime/src/: lib.rs
(+71 files in other folders)
